# VOLT

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MLP_Class.sln  README.md
MLP_Class/: Activation.hpp  DataUtil.hpp  Layer.hpp  Loss.hpp  MLP.hpp  MLP_Class.vcxproj  MLP_Class.vcxproj.filters  Neuron.hpp  Normalizer.hpp  main.cpp  storage.hpp  store.hpp  utils.hpp
MLP_Class/Data/: DataUtil.hpp
MLP_Class/Functions/: Activation.hpp  Loss.hpp
MLP_Class/Model/: Layer.hpp  MLP.hpp
MLP_Class/Normalizer/: Normalizer.hpp
MLP_Class/Optimizers/: Optimizer.hpp
MLP_Class/Regularization/: Regularization.hpp
MLP_Class/Utility/: Pair.hpp  store.hpp  utils.hpp
MLP_Class/Weights/: Initializers.hpp
datasets/: ProcessedHousing.csv
docs/: Multilayer Perceptron.docx  ~$ltilayer Perceptron.docx  ~WRL3936.tmp
include/Data/: DataUtil.hpp
include/Model/: Layer.hpp  MLP.hpp
include/Normalizer/: Normalizer.hpp
include/Optimizers/: Optimizer.hpp
include/Regularization/: Regularization.hpp
include/Utility/: utils.hpp
include/Weights/: Initializers.hpp
src/: main.cpp
